# bootloader

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
.helix/: languages.toml
asm/x86-unknown-none/: bootloader.asm  cpuid.asm  gdt.asm  iso.asm  long_mode.asm  memory_map.asm  print.asm  protected_mode.asm  stage1.asm  stage2.asm  thunk.asm  unreal.asm
linkers/: riscv64-unknown-uefi.ld  x86-unknown-none.ld
mk/: aarch64-unknown-uefi.mk  riscv64gc-unknown-uefi.mk  x86-unknown-none.mk  x86_64-unknown-uefi.mk
src/: disk.rs  editor.rs  lib.rs  logger.rs  macros.rs  main.rs  memory_map.rs  paging.rs  panic.rs  serial_16550.rs  thunk.rs  vga.rs
src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
src/arch/aarch64/: paging.rs
src/arch/riscv64/: mod.rs  sv39.rs  sv48.rs  sv57.rs
src/arch/x86/: mod.rs  x32.rs  x64.rs
src/arch/x86_64/: mod.rs  paging.rs
src/os/: mod.rs
src/os/bios/: disk.rs  macros.rs  memory_map.rs  mod.rs  panic.rs  serial.rs  thunk.rs  vbe.rs  vga.rs
src/os/uefi/: acpi.rs  device.rs  disk.rs  display.rs  dtb.rs  key.rs  memory_map.rs  mod.rs  null.rs  text.rs  video_mode.rs
src/os/uefi/arch/: aarch64.rs  mod.rs  x86_64.rs
src/os/uefi/arch/aarch64/: memory_map.rs  mod.rs  paging.rs
src/os/uefi/arch/riscv64/: boot_protocol.rs  coff_helper.rs  mod.rs
src/os/uefi/arch/x86_64/: memory_map.rs  mod.rs  paging.rs
targets/: aarch64-unknown-uefi.json  riscv64gc-unknown-uefi.json  x86-unknown-none.json
x86/: disk.asm  stage2.asm  startup-common.asm  startup-x86.asm  startup-x86_64.asm  thunk.asm
x86_64/: bootsector.asm  config.asm  cpuid.asm  cpuid.inc  disk.asm  initialize.asm  livedisk.asm  partitions.asm  print16.asm  redoxfs.asm  startup-common.asm  startup-x86_64.asm  vesa.asm
