[package]
name = "redox_bootloader"
version = "1.0.0"
edition = "2018"

# UEFI uses bin target
[[bin]]
name = "bootloader"
path = "src/main.rs"

# BIOS uses lib target
[lib]
name = "bootloader"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
linked_list_allocator = "0.9.1"
log = "0.4.14"
redox_syscall = "0.2.10"
redoxfs = { git = "https://gitlab.redox-os.org/redox-os/redoxfs.git", branch = "0.5.0", default-features = false }
spin = "0.9.2"

[target.'cfg(target_os = "uefi")'.dependencies]
redox_uefi = "0.1.3"
redox_uefi_std = "0.1.5"

[target."x86_64-unknown-uefi".dependencies]
x86 = "0.43.0"

[features]
default = []
live = []
