[package]
name = "redox_bootloader"
version = "1.0.0"
edition = "2018"

# UEFI uses bin target
[[bin]]
name = "bootloader"
path = "src/main.rs"

# BIOS uses lib target
[lib]
name = "bootloader"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
linked_list_allocator = "0.9.1"
log = "0.4.14"
redox_syscall = "0.2.13"
spin = "0.9.2"

[dependencies.redoxfs]
version = "0.5.0"
default-features = false
features = ["force-soft"]

[target.'cfg(target_os = "uefi")'.dependencies]
redox_uefi = "0.1.5"
redox_uefi_std = "0.1.7"

[target."x86_64-unknown-uefi".dependencies]
x86 = "0.47.0"

[features]
default = []
live = []
