[package]
name = "redox_bootloader"
version = "1.0.0"
edition = "2021"

# UEFI uses bin target
[[bin]]
name = "bootloader"
path = "src/main.rs"

# BIOS uses lib target
[lib]
name = "bootloader"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.3.2"
linked_list_allocator = "0.10.5"
log = "0.4.17"
redox_syscall = "0.5"
spin = "0.9.5"

[dependencies.redoxfs]
version = "0.6.0"
default-features = false
features = ["force-soft", "log"]

[target.'cfg(target_os = "uefi")'.dependencies]
redox_uefi = { git = "https://gitlab.redox-os.org/redox-os/uefi.git" }
redox_uefi_std = { git = "https://gitlab.redox-os.org/redox-os/uefi.git" }

[target."aarch64-unknown-uefi".dependencies]
dmidecode = "0.8.0"

[target."x86_64-unknown-uefi".dependencies]
x86 = "0.52.0"

[target.'cfg(any(target_arch = "aarch64", target_arch = "riscv64"))'.dependencies]
byteorder = { version = "1", default-features = false }
fdt = "0.1.5"

[features]
default = []
live = []
serial_debug = []

